--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                     <a href="" class="a"><img class="icons" src="иконки/отпрвить отзыв.png" alt="">Отправить отзыв</a><br>
                     <a href="" class="a"><img class="icons" src="иконки/Связь.png" alt="">Связаться с нами</a><br>
                 </div>
+                <hr class="hr4">
+                <div class="other2">
+                    <a href="" class="a"><img class="icons" src="иконки/творчество.png" alt="">Творческая студия</a><br>
+                    <a href="" class="a"><img class="icons" src="иконки/карточка.png" alt="">Кошелек</a><br>
+                </div>
             </div>
             <hr class="hr2">
         <div class="hr">
@@ -109,6 +114,11 @@
             <a class="icon-links" href=""><img title="Отзывы" src="иконки/Отзовы.png" alt="" class="icon2"></a><br>
             <a class="icon-links" href=""><img title="Отправить отзыв" src="иконки/отпрвить отзыв.png" alt="" class="icon2"></a><br>
             <a class="icon-links" href=""><img title="Связаться с нами" src="иконки/Связь.png" alt="" class="icon2"></a>
+        </div>
+        <hr class="hr3">
+        <div class="other">
+            <a class="icon-links" href=""><img title="Творческая студия" src="иконки/творчество.png" alt="" class="icon2"></a><br>
+            <a class="icon-links" href=""><img title="Кошелек" src="иконки/карточка.png" alt="" class="icon2"></a><br>
         </div>
     </div>
     <div id="registration" class="registration">
