--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
         </form>
         <div id="creation" class="creation">
-            <button class="notification-btn"><img class="notification-img" src="иконки/уведомления.png" alt=""></button>
-            <button class="add-btn"><img class="add-img" src="иконки/плюс.png" alt=""></button>
+            <button onclick="" class="notification-btn"><img class="notification-img" src="иконки/уведомления.png" alt=""></button>
+            <button onclick="" class="add-btn"><img class="add-img" src="иконки/плюс.png" alt=""></button>
         </div>
         <button id="btn-sign" onclick="registration()" class="btn-sign">Войти</button>
         <button id="acaunt" onclick="menu2()" class="acaunt"></button>
@@ -83,6 +83,7 @@
                     <a href="" class="a"><img class="icons" src="иконки/Связь.png" alt="">Связаться с нами</a><br>
                 </div>
                 <hr class="hr4">
+                <div class="possibilitiess"><h3 class="possibilities">Другие вазможности</h3></div>
                 <div class="other2">
                     <a href="" class="a"><img class="icons" src="иконки/творчество.png" alt="">Творческая студия</a><br>
                     <a href="" class="a"><img class="icons" src="иконки/карточка.png" alt="">Кошелек</a><br>
