--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
                     <a href="" class="a"><img class="icons" src="иконки/избранное.png" alt="">Избранное</a><br>
                     <a href="" class="a"><img class="icons" src="иконки/Справка.png" alt="">Справка</a><br>
             </div>
+            <hr class="hr3">
+            <div class="user-you">
+                <button class="btn-you"><a class="a-you" href=""></a>Вы <img class="you" src="иконки/стрелка в право.png" alt=""></button>
+                <a href="" class="a"><img class="icons" src="иконки/истории.png" alt="">Истории</a><br>
+                <a href="" class="a"><img class="icons" src="иконки/плейлисты.png" alt="">Плейлисты</a><br>
+                <a href="" class="a"><img class="icons" src="иконки/ваши видео.png" alt="">Ваши видео</a><br>
+                <a href="" class="a"><img class="icons" src="иконки/смотреть позже.png" alt="">Смотреть позже</a><br>
+                <a href="" class="a"><img class="icons" src="иконки/лайк.png" alt="">Понравившиеся</a><br>
+            </div>
                 <hr class="hr3">
                 <div class="other">
                     <a href="" class="a"><img class="icons" src="иконки/Отзовы.png" alt="">Отзывы</a><br>
@@ -93,6 +102,13 @@
         <div class="hr">
             <a class="hr1" href="">Применяются<br> рекомендательные<br> технологии</a>
         </div>
+        <hr class="hr2">
+        <div class="hr">
+            <a class="hr1" href="">для бизнеса</a><br>
+            <a class="hr1" href="">Разработчикам</a><br>
+            <a class="hr1" href="">Блог,</a>
+            <a class="hr1" href="">о unit</a><br>
+        </div>
     </div>
     <div id="icon-div" class="icon-div">
         <div class="content">
@@ -109,6 +125,14 @@
             <a class="icon-links" href=""><img title="Премиум" src="иконки/звезда.png" alt="" class="icon2"></a><br>
             <a class="icon-links" href=""><img title="Избранное" src="иконки/избранное.png" alt="" class="icon2"></a><br>
             <a class="icon-links" href=""><img title="Справка" src="иконки/Справка.png" alt="" class="icon2"></a><br>
+        </div>
+        <hr class="hr3">
+        <div class="user-you">
+                <a href="" class="icon-links"><img title="истории" class="icon2" src="иконки/истории.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="плейлисты" class="icon2" src="иконки/плейлисты.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="ваши видео" class="icon2" src="иконки/ваши видео.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="смотреть позже" class="icon2" src="иконки/смотреть позже.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="лайк" class="icon2" src="иконки/лайк.png" alt=""></a><br>
         </div>
         <hr class="hr3">
         <div class="other">
@@ -141,6 +165,9 @@
             <button onclick="registration2()" class="login">Войти</button>
             <button onclick="registration3()()" class="signup">Зарегистрироваться</button>
         </div>
+    </div>
+    <div id="content-watch" class="content-watch">
+        
     </div>
 </body>
 </html>
