--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             <hr class="hr3">
             <div class="user-you">
                 <button class="btn-you"><a class="a-you" href=""></a>Вы <img class="you" src="иконки/стрелка в право.png" alt=""></button>
-                <a href="" class="a"><img class="icons" src="иконки/истории.png" alt="">Истории</a><br>
-                <a href="" class="a"><img class="icons" src="иконки/плейлисты.png" alt="">Плейлисты</a><br>
-                <a href="" class="a"><img class="icons" src="иконки/ваши видео.png" alt="">Ваши видео</a><br>
-                <a href="" class="a"><img class="icons" src="иконки/смотреть позже.png" alt="">Смотреть позже</a><br>
-                <a href="" class="a"><img class="icons" src="иконки/лайк.png" alt="">Понравившиеся</a><br>
+                <a href="" class="a"><img class="icons-you" src="иконки/истории.png" alt="">Истории</a><br>
+                <a href="" class="a"><img class="icons-you" src="иконки/плейлисты.png" alt="">Плейлисты</a><br>
+                <a href="" class="a"><img class="icons-you" src="иконки/ваши видео.png" alt="">Ваши видео</a><br>
+                <a href="" class="a"><img class="icons-you" src="иконки/смотреть позже.png" alt="">Смотреть позже</a><br>
+                <a href="" class="a"><img class="icons-you" src="иконки/лайк.png" alt="">Понравившиеся</a><br>
             </div>
                 <hr class="hr3">
                 <div class="other">
@@ -128,11 +128,11 @@
         </div>
         <hr class="hr3">
         <div class="user-you">
-                <a href="" class="icon-links"><img title="истории" class="icon2" src="иконки/истории.png" alt=""></a><br>
-                <a href="" class="icon-links"><img title="плейлисты" class="icon2" src="иконки/плейлисты.png" alt=""></a><br>
-                <a href="" class="icon-links"><img title="ваши видео" class="icon2" src="иконки/ваши видео.png" alt=""></a><br>
-                <a href="" class="icon-links"><img title="смотреть позже" class="icon2" src="иконки/смотреть позже.png" alt=""></a><br>
-                <a href="" class="icon-links"><img title="лайк" class="icon2" src="иконки/лайк.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="истории" class="icon-links-you" src="иконки/истории.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="плейлисты" class="icon-links-you" src="иконки/плейлисты.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="ваши видео" class="icon-links-you" src="иконки/ваши видео.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="смотреть позже" class="icon-links-you" src="иконки/смотреть позже.png" alt=""></a><br>
+                <a href="" class="icon-links"><img title="лайк" class="icon-links-you" src="иконки/лайк.png" alt=""></a><br>
         </div>
         <hr class="hr3">
         <div class="other">
